fix navbar overlapping content and flash message
fixes #513

--- a/app/assets/stylesheets/frab.css
+++ b/app/assets/stylesheets/frab.css
@@ -1,6 +1,9 @@
 body {
-  padding-top: 40px;
   background-color: #eeeeee;
+}
+
+.topbar {
+  display: contents;
 }
 
 .topbar .fill {
